# NORAB106_BT_HeartRate

./: CMakeLists.txt  Readme.md  prj.conf  ubx_evknorab10_nrf5340_cpuapp_ns.overlay
inc/: adc_abstract.h  bt_abstract.h  common.h  peripheral.h
src/: main.c
src/peripheral/: adc_abstract.c  bt_abstract.c  gpio_abstract.c  peripheral.c
